# file-watcher

./: .gitignore  README.md  pyproject.toml
file_watcher/: main.py
